@@ -1,5 +1,15 @@
 2019-12-03  Yusuke Suzuki  <ysuzuki@apple.com>
 
+        Unreviewed, fix build failure
+        https://bugs.webkit.org/show_bug.cgi?id=186552
+
+        * wasm/WasmAirIRGenerator.cpp:
+        (JSC::Wasm::AirIRGenerator::getGlobal):
+        * wasm/WasmB3IRGenerator.cpp:
+        (JSC::Wasm::B3IRGenerator::setGlobal):
+
+2019-12-03  Yusuke Suzuki  <ysuzuki@apple.com>
+
         [JSC] Remove WebAssemblyToJSCallee
         https://bugs.webkit.org/show_bug.cgi?id=204808
 
